--- a/GUI Project/GUI Project.vcxproj.filters
+++ b/GUI Project/GUI Project.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="GameObjectManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameBall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
