--- a/GUI Project/GUI Project.vcxproj
+++ b/GUI Project/GUI Project.vcxproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameBall.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="GUI Project.cpp" />
     <ClCompile Include="MainMenu.cpp" />
